Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25998

Rendering corruption in depth 30 on Linux

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.7, 5.4.0 Alpha
    • 4.8.1, 5.3.0
    • GUI: Painting
    • None
    • Linux x86_64
      Ubuntu 12.04
      KDE 4.8.3
      NVIDIA graphics driver

      If you start an X server in depth 30 (eg. X -depth 30) and use the default Qt graphics system, all the colors are corrupted:

      http://plagman.net/stuff/kde-4.8.3-depth-30.png

      Setting $QT_GRAPHICSSYSTEM=native works around the problem.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            plagman Pierre-Loup A. Griffais
            Votes:
            5 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes